@startuml

title __VIEW's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.GameView {
          - shapeRenderer : ShapeRenderer
          - spriteBatch : SpriteBatch
          - stage : Stage
          + GameView()
          + hide()
          + render()
          + show()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.LobbyView {
          - backgroundTexture : Texture
          - spriteBatch : SpriteBatch
          - stage : Stage
          - themeMusic : Music
          + LobbyView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
          - getFakeHighScoreList()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.MainMenuView {
          - backgroundTexture : Texture
          - spriteBatch : SpriteBatch
          - stage : Stage
          + MainMenuView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.MatchmakingView {
          - bitmapFont : BitmapFont
          - spriteBatch : SpriteBatch
          - stage : Stage
          + MatchmakingView()
          + dispose()
          + hide()
          + pause()
          + render()
          + resize()
          + resume()
          + show()
          - handleInput()
      }
    }
  }
  

  no.ntnu.idi.apollo69.view.GameView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.GameView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.controller.GameController : controller
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.model.GameModel : model
  no.ntnu.idi.apollo69.view.LobbyView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.LobbyView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.LobbyView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.controller.LobbyController : lobbyController
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.model.LobbyModel : lobbyModel
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.MainMenuView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.controller.MainMenuController : mainMenuController
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.model.MainMenuModel : mainMenuModel
  no.ntnu.idi.apollo69.view.MatchmakingView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.controller.MatchmakingController : controller
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.model.MatchmakingModel : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
